<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/EditMovies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/edit_movies"
        android:textColor="@color/design_default_color_primary_dark"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Ratings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DisplayMovies"
        app:layout_constraintVertical_bias="0.985"
        android:onClick="launchEditMovies"/>

    <Button
        android:id="@+id/Search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/search"
        android:textColor="@color/design_default_color_primary_dark"
        app:backgroundTint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/DisplayMovies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DisplayMovies"
        android:onClick="launchSearch"/>

    <Button
        android:id="@+id/DisplayMovies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/display_movies"
        android:textColor="@color/design_default_color_primary_dark"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/EditMovies"
        app:layout_constraintEnd_toStartOf="@+id/Search"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterMovie"
        android:onClick="launchDisplayMovies"/>

    <Button
        android:id="@+id/RegisterMovie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/register_movie"
        android:textColor="@color/design_default_color_primary_dark"
        app:backgroundTint="@color/design_default_color_surface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Favourites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771"
        android:onClick="launchRegisterMovies"/>

    <Button
        android:id="@+id/Favourites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/favourites"
        android:textColor="@color/design_default_color_primary_dark"
        app:backgroundTint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/RegisterMovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/RegisterMovie"
        android:onClick="launchFavourites"/>

    <Button
        android:id="@+id/Ratings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ratings"
        android:textColor="@color/design_default_color_primary_dark"
        app:backgroundTint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/EditMovies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EditMovies"
        android:onClick="launchRatings"/>

    <TextView
        android:id="@+id/Heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/movie_tracker"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_200"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>